<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_valor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_valor" />

            <EditText
                android:id="@+id/txt_valor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_valor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_valor" />

            <EditText
                android:id="@+id/txt_valor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chk_sumar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sumar" />

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/chk_restar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_restar" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/chk_multiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_multiplicar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/chk_dividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_dividir" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_RSuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ResSuma" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_RResta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ResResta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_RMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ResMultipl" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_RDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Divisi" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout6"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_operar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calcular"
                android:text="@string/str_operar" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cerrar"
                android:text="@string/str_salir" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="349dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout7"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_limpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_limpiar"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="338dp" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>